--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NutriWish"
+        android:theme="@style/Theme.Nutriwish"
         tools:targetApi="31">
-        <activity
-            android:name=".CalendarActivity"
-            android:exported="false" />
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".IntroActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
